small bugs fixed

--- a/app/view/header.phtml
+++ b/app/view/header.phtml
@@ -12,7 +12,7 @@
 <body>
 	<nav class="navbar">
 		<ul>
-			<li><a href="/home/index" <?php echo ($action == 'index'?'class=active':''); ?>>Home</a></li>
-			<li><a href="/home/aboutUs" <?php echo ($action == 'aboutUs'?'class=active':''); ?>>AboutUs</a></li>
+			<li><a href="/home/index" <?php echo ($action == 'home/index'?'class=active':''); ?>>Home</a></li>
+			<li><a href="/home/aboutUs" <?php echo ($action == 'home/aboutUs'?'class=active':''); ?>>AboutUs</a></li>
 		</ul>
 </nav>
